# harmony-napi-bridge

./: .gitignore  DESIGN.md  NAPIInit.kt  README.md  TestClose.kt  build.gradle.kts  deploy_to_ohos.sh  gradle.properties  konan.properties  local.properties  settings.gradle.kts  test.kt  test3.kt  test_ksp.kt  test_pthread.kt
.konan/dependencies/: .extracted
.konan/dependencies/aarch64-unknown-linux-gnu-gcc-8.3.0-glibc-2.25-kernel-4.9-2/: build.log.bz2
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: ohos-error-log-crash.md
.planning/phases/04-1/: 04-PLAN.md  04-RESEARCH.md  04-SUMMARY.md  VERIFICATION.md
.planning/phases/05-create-real-ets-test-page-for-device-debugging-of-khn-har/: 05-CONTEXT.md  05-DISCUSSION-LOG.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: ARKUI_V2_KSP_PLAN.md
gradle/: libs.versions.toml
harmony-napi-annotations/: build.gradle.kts
harmony-napi-ksp-processor/: build.gradle.kts
harmony-napi-runtime/: build.gradle.kts
ohos/: build-profile.json5  oh-package-lock.json5  oh-package.json5
ohos/AppScope/: app.json5
ohos/entry/: build-profile.json5
ohos/khn/: Index.ets  build-profile.json5  oh-package-lock.json5  oh-package.json5
ohos/khn/src/main/cpp/: CMakeLists.txt  napi_init.cpp
ohos/khn/src/main/cpp/types/libkhn/: Index.d.ts  oh-package.json5
ohos/oh_modules/: khn
sample-plugin/: build.gradle.kts
(+3637 files in other folders)
